# TDR2tree

./: .gitignore  .gitmodules  BlockingCollection.h  CMakeLists.txt  Converter.cpp  Converter.h  Dockerfile  README.md  main.cpp  tools.cpp
CalScripts/: CalibrateBack.C  CalibrateClover.C  CalibrateLaBrF.C  CalibrateLaBrL.C  CalibrateLaBrLPlot.C  CalibrateLaBrS.C  CalibrateRing.C  CalibrateRings.cpp  CalibrateRun.C  CalibrateSect.C  CalibrateSector.C
Configuration/: CMakeLists.txt  Options.h
Containers/: BasicStruct.cpp  BasicStruct.h  CMakeLists.txt  Event.cpp  Event.h  Event_old.cpp  Event_old.h  Histogram1D.cpp  Histogram1D.h  Histogram2D.h  Histograms.cpp  TDREvent.cpp  TDREvent.h
FileReader/: BasicFileReader.cpp  BasicFileReader.h  BufferFetcher.h  BufferType.h  CMakeLists.txt  FileBufferFetcher.h  FileReader.cpp  FileReader.h  MTFileBufferFetcher.cpp  MTFileBufferFetcher.h  MemoryMap.cpp  MemoryMap.h  STFileBufferFetcher.cpp  STFileBufferFetcher.h  TDREntry.cpp  TDRFileReader.cpp  TDRFileReader.h  TDRParser.cpp  TDRParser.h  TDRTypes.h  XIA_CFD.cpp
PhysicalParam/: CMakeLists.txt  Calibration.cpp  Calibration.h  PolygonGate.cpp  PolygonGate.h  experimentsetup.c  experimentsetup.cpp  experimentsetup.h
RootInterface/: CMakeLists.txt  HistManager.cpp  HistManager.h  RootFileManager.cpp  RootFileManager.h  RootInterface.cpp  RootInterface.h  TreeManager.cpp  TreeManager.h
TCal_files/: RunTDR2Tree.py
TDR2tree/: BasicStruct.cpp  BasicStruct.h  CMakeLists.txt  Calibration.cpp  Calibration.h  CommandLineInterface.cpp  CommandLineInterface.h  Event.cpp  Event.h  FileReader.h  LinkDef.h  RootLinkDef.h  TDR2tree.pro  event.cpp  event.h  experimentsetup.c  experimentsetup.h  main.cpp  tools.cpp  tools.h
TDR2tree/Containers/: BasicStruct.h  Event.cpp  Event.h
TDR2tree/FileReader/: CMakeLists.txt
TDR2tree/PhysicalParam/: CMakeLists.txt  Calibration.h
TDR2tree/RootInterface/: TreeManager.cpp
TDR2tree/Tools/: CommandLineInterface.h
Tools/: CMakeLists.txt  ProgressUI.h
TreeSorter/: runSelector.C  selector.C  selector.h
app/: RootSortSingleThread.cpp  RootSortSingleThread.h  SortUtillities.cpp  SortUtillities.h  TDR2hdf5.cpp  TDR2tree.cpp  csv_exporter.cpp  main.cpp  mt_main.cpp  st_main.cpp  tdr2hist.cpp
building/: Makefile  multipros_runtimecal.py  runtimecal.py
cal_files/: R60.cal  cal_basic.txt
cmake/: ParseAndAddCatchTests.cmake  RPClib-CMakeLists.txt.in  libsirius-CMakeLists.txt.in  spdlog-CMakeLists.txt.in  taopq-CMakeLists.txt.in
include/Buffer/: Buffer.h  BufferFetcher.h  FileBufferFetcher.h  FileReader.h  MTFileBufferFetcher.h  NetworkBufferFetcher.h  STFileBufferFetcher.h
include/Containers/: BasicStruct.h  Event.h  Histogram1D.h  Histogram2D.h  Histogram3D.h  Histograms.h  MamaWriter.h  ParticleTreeEvent.h  RFTreeEvent.h  RootWriter.h  ThreadSafeEvent.h  ThreadSafeHistograms.h  TreeEvent.h
include/Event/: Event.h  iTLEvent.h  iThembaEvent.h  iThembaEventBuilder.h
include/FileReader/: BufferType.h  FileBufferFetcher.h  FileReader.h  MTFileBufferFetcher.h  TDRChannel.h  TDREntry.h  TDRParser.h  XIA_CFD.h  aptr.hpp
include/Parameters/: Calibration.h  XIA_CFD.h  experimentsetup.h
include/Parser/: Entry.h  Parser.h  TDRparser.h  TDRtypes.h  XIAparser.h  XIAtypes.h
include/PhysicalParam/: Calibration.h  experimentsetup.h
include/RootInterface/: HistManager.h  RootFileManager.h  RootInterface.h  TreeManager.h
include/Tasks/: Buffer.h  Reader.h  RootSort.h  Sort.h  Splitter.h  Task.h  Trigger.h  XIAReader.h
include/Tools/: CommandLineInterface.h
include/Utilities/: BlockingQueue.h  CLI_interface.h  HDF5_writer.h  ProgressUI.h
output_files/: r100time.root  r101time.root  r102time.root  r103time.root  r104time.root  r105time.root  r106time.root  r107time.root  r108time.root  r109time.root  r110time.root  r111time.root  r112time.root  r113time.root  r114time.root  r115time.root  r116time.root  r117time.root  r118time.root  r119time.root  r120time.root  r121time.root  r122time.root  r123time.root  r124time.root  r125time.root  r126time.root  r127time.root  r128time.root  r129time.root  r130time.root  r84time.root  r85time.root  r86time.root  r87time.root  r88time.root  r89time.root  r90time.root  r91time.root  r92time.root  (+7 more)
source/Containers/: Event.cpp  Histogram1D.cpp  Histogram2D.cpp  Histogram3D.cpp  Histograms.cpp  MamaWriter.cpp  ParticleTreeEvent.cpp  RFTreeEvent.cpp  RootWriter.cpp  ThreadSafeEvent.cpp  TreeEvent.cpp
source/FileReader/: FileReader.cpp  MTFileBufferFetcher.cpp  STFileBufferFetcher.cpp  TDRChannel.cpp  TDRParser.cpp  TDRTypes.cpp  XIA_CFD.cpp
source/PhysicalParam/: Calibration.cpp  ParticleRange.cpp  experimentsetup.c
source/RootInterface/: HistManager.cpp  RootFileManager.cpp
source/Tasks/: Buffer.cpp  Converter.cpp  Reader.cpp  RootSort.cpp  Sort.cpp  Splitter.cpp  Trigger.cpp  Triggers.cpp  XIAReader.cpp
source/Tools/: CommandLineInterface.cpp  ProgressUI.cpp
src/Buffer/: FileReader.cpp  MTFileBufferFetcher.cpp  PThreadMutex.h  PrefetchThread.cpp  PrefetchThread.h  RingBuffer.h  STFileBufferFetcher.cpp  aptr.cpp
src/Event/: iTLEvent.cpp  iThembaEvent.cpp  iThembaEventBuilder.cpp
src/Parameters/: Calibration.cpp  Parameters.cpp  XIA_CFD.cpp  experimentsetup.cpp
src/Parser/: Parser.cpp  TDRparser.cpp  TDRtypes.cpp  XIAparser.cpp
src/RootInterface/: HistManager.cpp  RootFileManager.cpp  RootInterface.cpp  TreeManager.cpp
src/Utilities/: CLI_interface.cpp  HDF5_writer.cpp  ProgressUI.cpp
test/: CMakeLists.txt
test/src/: TDRparser.cpp  main.cpp
